prevent scroll down on ios

--- a/app/(client)/component/Header/index.module.scss
+++ b/app/(client)/component/Header/index.module.scss
@@ -16,6 +16,7 @@
     height: 3.125rem;
     background-color: $themeColor3;
     padding: 0 1.25rem;
+    z-index: 10;
   }
 }
 
